# arquitectura

./: .gitignore  ClangFormat
common/: CMakeLists.txt  aux.hpp  binaryio.cpp  binaryio.hpp  colors.hpp  parsebinary.cpp  parsebinary.hpp  pixel.hpp  progargs.cpp  progargs.hpp  sizes.cpp  sizes.hpp  validatefile.cpp  validatefile.hpp
ftest-aos/: CMakeLists.txt  compress_test.sh  cut_freq_test.sh  info_test.sh  maxlevel_test.sh  resize_test.sh  run_all_tests.sh  test_utils.sh
ftest-aos/expected/: deer-small-maxlevel10.ppm  deer-small-resize100x200.ppm
ftest-aos/expected/resize/: deer-large-100.ppm  deer-large-1000.ppm  deer-small-100.ppm  deer-small-1000.ppm
ftest-aos/input/: deer-small-invalid.ppm
ftest-soa/: CMakeLists.txt  args_test.sh  compress_test.sh  cut_freq_test.sh  info_test.sh  maxlevel_test.sh  resize_test.sh  run_all_tests.sh  test_utils.sh
imgaos/: CMakeLists.txt  compress.cpp  cut_freq.cpp  imageaos.cpp  imageaos.hpp  imageaos_cut_freq.cpp  imageaos_max_level.cpp  imageaos_resize.cpp  max_level.cpp  pixel.hpp  resize.cpp
imgsoa/: CMakeLists.txt  compress.cpp  cut_freq.cpp  imagesoa.cpp  imagesoa.hpp  max_level.cpp  resize.cpp
imtool-aos/: main.cpp
imtool-soa/: CMakeLists.txt  main.cpp
utest-common/: CMakeLists.txt  aux_test.cpp  binaryio_test.cpp  colors_test.cpp  parsebinary_test.cpp  pixel_test.cpp  progargs_test.cpp  sizes_test.cpp  validatefile_test.cpp
utest-imgaos/: CMakeLists.txt  imageaos_compress_test.cpp  imageaos_cut_freq_test.cpp  imageaos_max_level_test.cpp  imageaos_resize_test.cpp  imageaos_test.cpp
utest-imgsoa/: CMakeLists.txt  imageaos_compress_test.cpp  imagesoa_cut_freq_test.cpp  imagesoa_max_level_test.cpp  imagesoa_resize_test.cpp  imagesoa_test.cpp
